--- a/UI/solutions-ui/src/styles.css
+++ b/UI/solutions-ui/src/styles.css
@@ -2,3 +2,14 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.body {
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 400;
+    line-height: 1.6;
+    color: #777;
+    background-image: linear-gradient(to right bottom, #216ade,#216ade);
+    background-size: cover;
+    
+
+    min-height: 100vh;
+}
